<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="temp_warning_url">http://www.yourgolf-online.com/alart/guide_en.txt</string>
    <string name="app_name">GOLFSCORE</string>
    <string name="msg_now_loading">Now in progress.</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_en">Cancel</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="par">par</string>
    <string name="hcp">hcp.</string>
    <string name="refresh">Refresh</string>
    <plurals name="Nyards">
        <item quantity="one">1 yard</item>
        <item quantity="other"><xliff:g id="COUNT">%d</xliff:g>			yards
		</item>
    </plurals>
    <string name="menu_about">About</string>
    <string name="network_unavailable_title">Network Unavailable</string>
    <string name="network_unavailable_message">Please make sure the network is working.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="none">-</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="sd_card_dir">/sdcard/yourgolf/</string>
    <string name="warning_max_shot">Sorry, the maximum strokes you can record is 15.</string>
    <string name="confirmation">Confirmation</string>
    <string name="warning">Warning</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="sorry">Sorry...</string>
    <string name="meters">meters</string>
    <string name="close">close</string>
    <string name="done">Done</string>
    <string name="msg_now_get_location">searching current location...</string>
    <string name="date_format1">MMM d, yyyy</string>
    <string name="round_detail_date_format">yyyy/MM/dd</string>
    <string name="agency_request_date_format">MMM d, yyyy HH:mm</string>
    <string name="error_general">Sorry, unknown error has occurred at YourGolf-Online server transaction. Please try it later.</string>
    <string name="error_connect_timeout">Cannot connect to Server. Please ensure you are connected and try again.</string>
    <string name="error_socket_timeout">Your request timed out. Please try it later.</string>
    <string name="error_e0001">Sorry, unknown error has occurred at GOLF NETWORK PLUS server transaction. Please try it later.</string>
    <string name="error_e0105">Oops! We have some system trouble. Please logout and re-login from the setting page.\n
        If the message appears again after login, please Contact Us through the Settings section.</string>
    <string name="error_e0117">This player has already deleted.</string>
    <string name="error_e0138">This course data was updated. Please search and download the latest data of it.</string>
    <string name="error_e0139">ユーザIDまたはパスワードに誤りがあります</string>
    <string name="error_e0140">楽天GORAのMyPageからログインを行ってください</string>
    <string name="error_internal_server">Internal server error.\nPlease try again after a while.</string>
    <string name="error_400_get_thumb">Server response 400 error.</string>
    <string name="error_500_get_thumb">Server response 500 error.</string>
    <string name="error_400_request">Have some issue when connected server. Please try it again</string>
    <string name="adsense_channel_id">7843695134</string>
    <string name="admaker_siteId">1903</string>
    <string name="admaker_zoneId">4973</string>
    <string name="admaker_setUrl">http://images.ad-maker.info/apps/knx9ydfkbk4a.html</string>
    <string name="no_owner_informatino">You have to set name of yourself.\nPlease go to
		"settings". </string>
    <string name="play_button_description"><font fgcolor="#FF450000"><b>Play golf</b></font></string>
    <string name="playing_histories_button_description"><font fgcolor="#FF450000"><b>Score Cards</b></font></string>
    <string name="analysis_button_description"><font fgcolor="#FF450000"><b>Score Analysis</b></font></string>
    <string name="ygo_button_description"><font fgcolor="#FF450000"><b></b></font></string>
    <string name="about_button_description"><font fgcolor="#FF450000"><b>Help</b></font></string>
    <string name="check_gps_title">GPS is disabled</string>
    <string name="check_gps_message">Some functions need GPS to be enabled.\n\n
    Would you like to go to the setting menu to turn on your GPS?</string>
    <string name="yourgolf_online_signup_title">Please Sign up YourGolf-Online</string>
    <string name="yourgolf_online_signup_msg">Sign up YourGolf-Online Now! You can backup/restore your golf scores and will get new services!</string>
    <string name="info">YourGolf Online service is started. For YourGolf funs ONLY!! Please Touch HERE and start it NOW!</string>
    <string name="facebook_url">http://www.facebook.com/pages/YourGolf/165130610190323</string>
    <string name="ygo_url">http://www.yourgolf-online.com/m/</string>
    <string name="select_course_title">YourGolf - Course Search</string>
    <string name="oob_menu">Search a course by oobgolf.com</string>
    <string name="yourgolf_menu">Search a course by YourGolf-Online\n(Japanese course only)</string>
    <string name="history_menu">Course Search History</string>
    <string name="golfnavi_menu">Search a course from [Golf Navi] app</string>
    <string name="golfnavi_title">Golf Navi</string>
    <string name="golfnavi_msg">If you have installed [Golf Navi], you can visually search golf courses on a map. Also, the app navigate you to the selected golf course. Please try it now!\n*If you use old version, this message is displayed. So, please update [Golf Navi] to the latest version at Android Market. </string>
    <string name="golfnavi_market">Android Market</string>
    <string name="keyword_label">Keyword:</string>
    <string name="search">Search</string>
    <string name="more_results">more...</string>
    <string name="no_tees_message">The course data does not exist.\n
	Please visit oobgolf.com to register the course data.</string>
    <string name="oob_credit_title"> credit &amp; links </string>
    <string name="oob_credit">Powered by <a href="http://www.oobgolf.com/">oobgolf.com</a></string>
    <string name="search_online">Search</string>
    <string name="search_history">History</string>
    <string name="setting_yourgolf_key">yourgolf</string>
    <string name="setting_yourgolf_title">YourGolf setting</string>
    <string name="setting_yourgolf_summary">Please specify settings for YourGolf</string>
    <string name="setting_category_owner_info">Owner\'s Information</string>
    <string name="key_owner_club">key_owner_club</string>
    <string name="key_Push_Notification_conf">key_Push_Notification_conf</string>
    <string name="Push_Notification">Push Notification</string>
    <string name="key_owner_stableford">key_owner_stableford</string>
    <string name="input_putt_for_friend_key">key_input_putt_for_friend</string>
    <string name="input_putt_for_friend_title">Enter competitors\' putts</string>
    <string name="setting_category_account">Account</string>
    <string name="setting_category_upgrade">Upgrade</string>
    <string name="setting_yourgolf_category_key">yourgolf_category</string>
    <string name="setting_yourgolf_upgrade_key">yourgolf_upgrade</string>
    <string name="setting_yourgolf_login_key">yourgolf_login</string>
    <string name="setting_yourgolf_signup_key">yourgolf_signup</string>
    <string name="setting_yourgolf_register_key">yourgolf_register</string>
    <string name="setting_yourgolf_update_player_name_key">yourgolf_update_player_name</string>
    <string name="setting_yourgolf_agency_request_limit_key">setting_yourgolf_agency_request_limit_key</string>
    <string name="setting_yourgolf_agency_enter_campaign_key">setting_yourgolf_agency_enter_campaign_key</string>
    <string name="setting_yourgolf_purchase_menu_key">setting_yourgolf_purchase_menu_key</string>
    <string name="setting_yourgolf_tv_activation_key">setting_yourgolf_tv_activation_key</string>
    <string name="setting_yourgolf_logout_key">yourgolf_logout</string>
    <string name="setting_yourgolf_login">Sign in</string>
    <string name="setting_yourgolf_signup">Sign up</string>
    <string name="setting_yourgolf_register">Profile</string>
    <string name="setting_yourgolf_update_player_name">Friends</string>
    <string name="setting_yourgolf_agency_request_limit_title_free">%1$d times you can request.</string>
    <string name="setting_yourgolf_agency_request_limit_summary_free"></string>
    <string name="setting_yourgolf_agency_enter_campaign_title">SCORE INPUT DEPUTIZING SERVICE</string>
    <string name="setting_yourgolf_purchase_menu">Subscriptions</string>
    <string name="setting_yourgolf_tv_activation">Remote Login</string>
    <string name="setting_yourgolf_logout">Sign out</string>
    <string name="setting_owner_info_key">owner_info</string>
    <string name="setting_main_key">setting_main</string>
    <string name="setting_category_app_setting">Application Settings</string>
    <string name="setting_category_app_setting_key">ategory_app_setting</string>
    <string name="setting_category_app_setting_use_game_point">Use point feature</string>
    <string name="setting_category_app_setting_use_game_point_summary">You can enter points by touching the hole number on Score Entry screen.</string>
    <string name="setting_category_app_setting_use_game_point_key">app_setting_use_game_point</string>
    <string name="setting_category_app_setting_measurement_unit">Measurement Unit</string>
    <string name="setting_category_app_setting_measurement_unit_key">app_setting_measurement_unit</string>
    <string name="setting_category_app_setting_measurement_unit_summary">off to use yardage</string>
    <string name="setting_category_app_setting_club">Club Setting</string>
    <string name="setting_category_app_setting_stableford_pro_scoring">Stableford Pro Mode</string>
    <string name="setting_category_app">About Application</string>
    <string name="setting_category_app_key">category_app</string>
    <string name="setting_app_user_guide">User\'s Guide</string>
    <string name="setting_app_news">News</string>
    <string name="setting_app_user_guide_key">app_user_guide</string>
    <string name="setting_app_user_news_key">app_user_news</string>
    <string name="setting_app_contact">Contact us</string>
    <string name="setting_app_contact_key">app_contact</string>
    <string name="setting_app_request_add_golf">Course Request</string>
    <string name="setting_app_request_add_golf_key">app_request_add_golf</string>
    <string name="setting_app_version_info">Current Version</string>
    <string name="setting_app_version_info_key">app_version_info</string>
    <string name="setting_app_terms">Terms of Service</string>
    <string name="setting_app_terms_key">app_terms</string>
    <string name="setting_profile_passport_category_key">profile_passport_category_key</string>
    <string name="setting_profile_passport_category_title">Coupon and Campaign</string>
    <string name="setting_profile_passport_key">profile_passport_key</string>
    <string name="setting_profile_passport_title">Coupon</string>
    <string name="setting_gora_category_key">gora_category</string>
    <string name="setting_category_gora_account">RAKUTEN</string>
    <string name="setting_gora_key">gora</string>
    <string name="setting_gora_title">Setting</string>
    <string name="setting_yourgolf_tv_trial_campaign_key">setting_yourgolf_tv_trial_campaign_key</string>
    <string name="setting_yourgolf_tv_trial_campaign_title">TV SUBSCRIPTION</string>
    <string name="setting_yourgolf_score_trial_campaign_key">setting_yourgolf_score_trial_campaign_key</string>
    <string name="setting_yourgolf_score_trial_campaign_title">SCORE UP SUBSCRIPTION</string>
</resources>