<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="@string/setting_main_key">

    <PreferenceCategory
        android:key="@string/setting_yourgolf_category_key"
        android:layout="@xml/preference_category"
        android:title="@string/setting_category_account">

        <PreferenceScreen
            android:key="@string/setting_yourgolf_login_key"
            android:layout="@xml/preference_screen_setting"
            android:title="@string/setting_yourgolf_login" />
        <PreferenceScreen
            android:key="@string/setting_yourgolf_signup_key"
            android:layout="@xml/preference_screen_setting"
            android:title="@string/setting_yourgolf_signup" />

        <PreferenceScreen
            android:key="@string/setting_yourgolf_register_key"
            android:layout="@xml/preference_screen_setting"
            android:title="@string/setting_yourgolf_register" />

        <PreferenceScreen
            android:key="@string/setting_yourgolf_update_player_name_key"
            android:layout="@xml/preference_screen_setting"
            android:title="@string/setting_yourgolf_update_player_name" />

        <PreferenceScreen
            android:key="@string/setting_yourgolf_tv_activation_key"
            android:layout="@xml/preference_screen_setting"
            android:title="@string/setting_yourgolf_tv_activation" />

        <PreferenceScreen
            android:key="@string/setting_yourgolf_logout_key"
            android:layout="@xml/preference_screen_setting"
            android:title="@string/setting_yourgolf_logout" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/setting_yourgolf_upgrade_key"
        android:layout="@xml/preference_category"
        android:title="@string/setting_category_upgrade">

        <PreferenceScreen
            android:key="@string/setting_yourgolf_purchase_menu_key"
            android:layout="@xml/preference_screen_setting"
            android:title="@string/setting_yourgolf_purchase_menu" />

        <PreferenceScreen
            android:key="@string/setting_yourgolf_agency_request_limit_key"
            android:layout="@xml/preference_noaction"
            android:summary="@string/setting_yourgolf_agency_request_limit_summary_free"
            android:title="@string/setting_yourgolf_agency_request_limit_title_free" />

        <PreferenceScreen
            android:key="@string/setting_yourgolf_agency_enter_campaign_key"
            android:layout="@xml/preference_screen_setting"
            android:title="@string/setting_yourgolf_agency_enter_campaign_title" />
        <PreferenceScreen
            android:key="@string/setting_yourgolf_score_trial_campaign_key"
            android:layout="@xml/preference_screen_setting"
            android:title="@string/setting_yourgolf_score_trial_campaign_title" />
        <PreferenceScreen
            android:key="@string/setting_yourgolf_tv_trial_campaign_key"
            android:layout="@xml/preference_screen_setting"
            android:title="@string/setting_yourgolf_tv_trial_campaign_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/setting_profile_passport_category_key"
        android:layout="@xml/preference_category"
        android:title="@string/setting_profile_passport_category_title">

        <PreferenceScreen
            android:key="@string/setting_profile_passport_key"
            android:layout="@xml/preference_screen_setting"
            android:title="@string/setting_profile_passport_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/setting_category_app_setting_key"
        android:layout="@xml/preference_category"
        android:title="@string/setting_category_app_setting">

        <CheckBoxPreference
            android:key="@string/input_putt_for_friend_key"
            android:layout="@xml/preference_checkbox"
            android:title="@string/input_putt_for_friend_title" />

        <CheckBoxPreference
            android:key="@string/setting_category_app_setting_use_game_point_key"
            android:layout="@xml/preference_checkbox"
            android:summary="@string/setting_category_app_setting_use_game_point_summary"
            android:title="@string/setting_category_app_setting_use_game_point" />

        <CheckBoxPreference
            android:key="@string/setting_category_app_setting_measurement_unit_key"
            android:layout="@xml/preference_checkbox"
            android:summary="@string/setting_category_app_setting_measurement_unit_summary"
            android:title="@string/setting_category_app_setting_measurement_unit" />

        <PreferenceScreen
            android:key="@string/key_owner_club"
            android:layout="@xml/preference_screen_setting"
            android:title="@string/setting_category_app_setting_club" />

        <CheckBoxPreference
            android:key="@string/key_owner_stableford"
            android:layout="@xml/preference_checkbox"
            android:title="@string/setting_category_app_setting_stableford_pro_scoring" />

        <CheckBoxPreference
            android:key="@string/key_Push_Notification_conf"
            android:layout="@xml/preference_checkbox"
            android:title="@string/Push_Notification" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/setting_owner_info_key"
        android:layout="@xml/preference_category"
        android:title="@string/setting_category_owner_info">

        <PreferenceScreen
            android:key="@string/setting_yourgolf_key"
            android:layout="@xml/preference_screen_setting"
            android:summary="@string/setting_yourgolf_summary"
            android:title="@string/setting_yourgolf_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/setting_gora_category_key"
        android:layout="@xml/preference_category"
        android:title="@string/setting_category_gora_account">


        <PreferenceScreen
            android:key="@string/setting_gora_key"
            android:layout="@xml/preference_screen_setting"
            android:title="@string/setting_gora_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/setting_category_app_key"
        android:layout="@xml/preference_category"
        android:title="@string/setting_category_app">

        <PreferenceScreen
            android:key="@string/setting_app_user_news_key"
            android:layout="@xml/preference_screen_setting"
            android:title="@string/setting_app_news" />

        <PreferenceScreen
            android:key="@string/setting_app_user_guide_key"
            android:layout="@xml/preference_screen_setting"
            android:title="@string/setting_app_user_guide" />

        <PreferenceScreen
            android:key="@string/setting_app_contact_key"
            android:layout="@xml/preference_screen_setting"
            android:title="@string/setting_app_contact" />

        <PreferenceScreen
            android:key="@string/setting_app_request_add_golf_key"
            android:layout="@xml/preference_screen_setting"
            android:title="@string/setting_app_request_add_golf" />

        <PreferenceScreen
            android:key="@string/setting_app_version_info_key"
            android:layout="@xml/preference_screen_version"
            android:title="@string/setting_app_version_info" />

        <PreferenceScreen
            android:key="@string/setting_app_terms_key"
            android:layout="@xml/preference_screen_setting"
            android:title="@string/setting_app_terms" />
    </PreferenceCategory>

</PreferenceScreen>